--- a/wasm/package.json
+++ b/wasm/package.json
@@ -8,13 +8,15 @@
     "asbuild:debug": "asc assembly/index.ts --target debug",
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "pnpm run asbuild:debug && pnpm run asbuild:release",
-    "start": "npx serve ."
+    "start": "npx serve .",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "assemblyscript": "^0.27.29"
+    "assemblyscript": "^0.27.29",
+    "nodemon": "^3.1.7"
   },
   "type": "module",
   "exports": {
