--- a/wasm/package.json
+++ b/wasm/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests",
-    "asbuild:debug": "asc assembly/index.ts --target debug",
-    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild:debug": "asc assembly/index.ts -b raw --target debug",
+    "asbuild:release": "asc assembly/index.ts -b raw --target release",
     "asbuild": "pnpm run asbuild:debug && pnpm run asbuild:release",
     "start": "npx serve .",
     "dev": "nodemon"
